@startuml

class Application {
+start(Stage stage)
+main(String[] args)
}

class ApplicationController {
-ResourceBundle resources
-URL location
-Button addList
-Button addTask
-Button exportLists
-Button importLists
-Button removeList
-Button removeTask
-ChoiceBox<String> showStatusBox
-TreeView<String> toDoItems
-ListView<String> toDoLists

+initialize(URL url, ResourceBundle rb)
}

class ToDo {
-List<ToDoList> toDoLists

+add(ToDoList list)
+remove(ToDoList list)
+saveLists(String outputFile)
+readLists(String inputFile)
+getToDoLists()
}

class ToDoList {
-String title
-List<ToDoItem> itemList
-boolean save

+ToDoList(String title)
+add(ToDoItem item)
+remove(ToDoItem item)
+getTitle()
+setTitle(String title)
+showAll()
+showIncomplete()
+showComplete()
+getSaveStatus()
+saveList()
+unSaveList()
}

class ToDoItem {
-String name
-String description
-String dueDate
-boolean complete
-boolean delete

+ToDoItem(String name, String description, String dueDate)
+getName()
+getDescription()
+getDueDate()
+isComplete()
+getDelete()
+setName(String name)
+setDescription(String description)
+setDueDate(String dueDate)
+markAsComplete()
+markAsIncomplete()
+delete()
+removeDelete()
}

class AddItemController {
-ResourceBundle resources
-URL location
-Button addItemButton
-DatePicker addItemDate
-TextArea addItemDescription
-ChoiceBox<String> addItemList
-TextField addItemName
+initialize()
}

class AddListController {
-ResourceBundle resources
-URL location
-Button addListButton
-TextField addListTitle
+initialize()
}

class ExportListsController {
-ResourceBundle resources
-URL location
-Button exportButton
-TextField exportFile
ListView<String> exportSelectLists
+initialize()
}

class ImportListsController {
-ResourceBundle resources
-URL location
-Button importButton
-TextField importFile
ListView<String> importSelectLists
+initialize()
}

class RemoveItemsController {
-ResourceBundle resources
-URL location
-Button removeItemsButton
ListView<String> removeSelectItems
+initialize()
}

class RemoveListsController {
-ResourceBundle resources
-URL location
-Button removeListsButton
ListView<String> removeSelectLists
+initialize()
}

Application <|-- ApplicationController
ApplicationController <|-- ToDo
ApplicationController <|-- AddItemController
ApplicationController <|-- AddListController
ApplicationController <|-- ExportListsController
ApplicationController <|-- ImportListsController
ApplicationController <|-- RemoveItemsController
ApplicationController <|-- RemoveListsController

AddItemController <|-- ToDo
AddListController <|-- ToDo
ExportListsController <|-- ToDo
ImportListsController <|-- ToDo
RemoveItemsController <|-- ToDo
RemoveListsController <|-- ToDo


ToDo *-- ToDoList
ToDoList *-- ToDoItem




@enduml